crates/mold_parser/src/snapshots/mold_parser__tests__some_array.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..67
  SELECT_STMT@0..67
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..20
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..20
        IDENT@14..19 "users"
        WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..67
      WHERE_KW@20..25 "WHERE"
      WHITESPACE@25..26 " "
      ANY_EXPR@26..67
        COLUMN_REF@26..33
          IDENT@26..32 "status"
          WHITESPACE@32..33 " "
        EQ@33..34 "="
        WHITESPACE@34..35 " "
        SOME_KW@35..39 "SOME"
        L_PAREN@39..40 "("
        ARRAY_EXPR@40..66
          ARRAY_KW@40..45 "ARRAY"
          L_BRACKET@45..46 "["
          LITERAL@46..54
            STRING@46..54 "'active'"
          COMMA@54..55 ","
          WHITESPACE@55..56 " "
          LITERAL@56..65
            STRING@56..65 "'pending'"
          R_BRACKET@65..66 "]"
        R_PAREN@66..67 ")"
