crates/mold_parser/src/snapshots/mold_parser__tests__subquery.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..54
  SELECT_STMT@0..54
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..41
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..41
        L_PAREN@14..15 "("
        SELECT_STMT@15..35
          SELECT_KW@15..21 "SELECT"
          WHITESPACE@21..22 " "
          SELECT_ITEM_LIST@22..25
            SELECT_ITEM@22..25
              COLUMN_REF@22..25
                IDENT@22..24 "id"
                WHITESPACE@24..25 " "
          FROM_CLAUSE@25..35
            FROM_KW@25..29 "FROM"
            WHITESPACE@29..30 " "
            TABLE_REF@30..35
              IDENT@30..35 "users"
        R_PAREN@35..36 ")"
        WHITESPACE@36..37 " "
        IDENT@37..40 "sub"
        WHITESPACE@40..41 " "
    WHERE_CLAUSE@41..54
      WHERE_KW@41..46 "WHERE"
      WHITESPACE@46..47 " "
      BINARY_EXPR@47..54
        COLUMN_REF@47..50
          IDENT@47..49 "id"
          WHITESPACE@49..50 " "
        GT@50..51 ">"
        WHITESPACE@51..52 " "
        LITERAL@52..54
          INTEGER@52..54 "10"
